@@ -1,5 +1,10 @@
 Sun Feb 23 09:54:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* sanity.sh (basicb): Add commented out test basicb-8a0, for
+	whether CVS can print an error on bad numeric revision to diff.
+	Commented out until we get around to fixing CVS.
+	* diff.c (diff_file_nodiff): Add comment about this case.
+
 	* fileattr.c (fileattr_read): If a filename is duplicated,
 	continue to ignore subsequent lines but free the node so that we
 	don't leak memory.
